--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,12 @@ services:
   mysql:
     image: mysql:latest
     restart: always
-    container_name: estudo-feed
+    container_name: feed-mysql
     environment:
       - MYSQL_ROOT_PASSWORD=estudofeed
       - MYSQL_DATABASE=estudo_cassandra
     ports:
       - 3307:3306
-    networks:
-      - estudo-feed-network
-
-  redis:
-    image: redis:latest
-    container_name: feed-redis
-    ports:
-      - 6379:6379
     networks:
       - estudo-feed-network
 
@@ -26,21 +18,30 @@ services:
     networks:
       - estudo-feed-network
 
-  kafka:
-    image: wurstmeister/kafka:latest
-    container_name: feed-kafka
-    ports:
-      - 9092:9092
-    environment:
-      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
-      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
-    networks:
-      - estudo-feed-network
-
   zookeeper:
     image: wurstmeister/zookeeper:latest
     ports:
-      - 2181:2181
+      - "2181:2181"
+    networks:
+      - estudo-feed-network
+  
+  kafka:
+    image: wurstmeister/kafka:latest
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+
+    networks:
+      - estudo-feed-network
+    depends_on:
+      - zookeeper
 
 networks:
   estudo-feed-network:
